# linkdinger

./: .env.example  .gitattributes  .gitignore  .kilocodemodes  .pyre_configuration  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  PR_BODY.md  README.md  auto_git.py  config.yaml  content_sync.py  dashboard.py  linkdinger.py  obsidian_watcher.py  package-lock.json  package.json  pyproject.toml  pyrightconfig.json  rename_file.py  requirements.txt  skills-lock.json  test_watch.py  translation_service.py
.agents/prompts/: analysis-template.md  implement-template.md  test-coverage-template.md
.github/: copilot-instructions.md
.husky/: pre-commit
.next/: trace  trace-build
.omx/: metrics.json
.omx/state/: hud-state.json  notify-hook-state.json  tmux-hook-state.json
_bmad-output/planning-artifacts/: epics.md  prd.md
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/_memory/: config.yaml
_bmad/bmb/: config.yaml
_bmad/bmm/: config.yaml
_bmad/cis/: config.yaml
_bmad/core/: config.yaml
_bmad/tea/: config.yaml
blog/: .env.example  .env.local  build-output.txt  build-output2.txt  middleware.ts  next.config.js  package-lock.json  package.json  proxy.ts  tailwind.config.js  tsconfig.tsbuildinfo
blog/app/: globals.css  layout.tsx  loading.tsx  not-found.tsx  page.tsx  robots.ts
blog/i18n/: request.ts  (+1 more)
docs/: ARCHITECTURE.md  BACKEND_TUTORIAL.md  CICD_GUIDE.md  Dark Glassmorphism-The Aesthetic.md  JustinSung ep2. _  How to Remember Everything You Read.md  NEXTJS_TUTORIAL.md  OBSIDIAN_PROMPT_TEMPLATE.md  OBSIDIAN_PROMPT_TEMPLATE_CORE.md  README.md  inspireblog.md  principle-blog.md  uxui-principle.md
scripts/: analyze.ps1  implement.ps1  verify.ps1
stubs/: README.md  auto_git.pyi  content_sync.pyi  dashboard.pyi  obsidian_watcher.pyi
tests/: test_auto_git.py  test_content_sync.py  test_linkdinger.py  test_translation_service.py  test_watcher.py  test_watcher_race.py
(+162 files in other folders)
